--- a/frontend/src/scss/_custom.scss
+++ b/frontend/src/scss/_custom.scss
@@ -10,7 +10,7 @@
     
     body {
         font-family: $fuentePrincipal;
-        background: $claro; 
+        background: $rosie; 
     }
     
     img {
